--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="grid">
-    <div class="col-12 md:col-6 lg:col-2" *ngFor="let forecast of dailyForecasts">
+    <div class="col-12 md:col-6 lg:col-2" style="min-width: fit-content;" *ngFor="let forecast of dailyForecasts">
       <div class="surface-card shadow-2 p-3 border-round">
         <div class="flex justify-content-between mb-3">
           <div>
